# android_sensors_driver

./: .gitignore  AndroidManifest.xml  CMakeLists.txt  README  README.md  build.gradle  build.sh  build.xml  buildscript.gradle  local.properties  package.xml  project.properties  settings.gradle
android_sensors_driver/: build.gradle  buildAll.sh  manifest.xml
android_sensors_driver/install/: install-android-studio.sh
android_sensors_driver/res/layout/: custom_spinner.xml
android_sensors_driver/res/values/: styles.xml
android_sensors_driver/src/org/ros/android/android_sensors_driver/utilities/: Config.java
cv_bridge/: AndroidManifest.xml  build.gradle
cv_bridge/res/values/: common_strings.xml
cv_bridge/src/cv_bridge/: CvImage.java  Encoding.java  Format.java
gradle/wrapper/: gradle-wrapper.properties
image/: AndroidManifest.xml  build.gradle
install/: install-android-sdk.sh  install-android-sensors-driver.sh  install-java-jdk.sh  install-rosjava-env.sh  install-rosjava.sh
opencv/: build.gradle
opencv3/: build.gradle
opencv3/src/org/opencv/android/: CameraBridgeViewBase.java  FpsMeter.java
res/layout/: activity_main.xml  custom_spinner_item.xml  my_master_chooser.xml  view_config.xml  view_main.xml
res/menu/: activity_main.xml
res/values/: strings.xml
res/xml/: preferences.xml
sensors_driver/: .gitignore  AndroidManifest.xml  build.gradle
sensors_driver/install/: install-android-core.sh
sensors_driver/res/layout/: activity_main.xml  view_config.xml  view_main.xml
sensors_driver/res/menu/: activity_main.xml
sensors_driver/src/udel/rpng/android_sensors_driver/publishers/images/: CompressedImagePublisher.java
sensors_driver/src/udel/rpng/sensors_driver/: MainActivity.java
sensors_driver/src/udel/rpng/sensors_driver/publishers/: FluidPressurePublisher.java  IlluminancePublisher.java  ImuPublisher.java  MagneticFieldPublisher.java  NavSatFixPublisher.java  TemperaturePublisher.java
sensors_driver/src/udel/rpng/sensors_driver/publishers/images/: CamerasPublishers.java  (+3 more)
sensors_driver/src/udel/rpng/sensors_driver/utilities/: Config.java
src/org/ros/android/android_sensors_driver/: FluidPressurePublisher.java  IlluminancePublisher.java  ImuPublisher.java  MagneticFieldPublisher.java  MainActivity.java  MasterChooser.java  NavSatFixPublisher.java  TemperaturePublisher.java
src/org/ros/android/android_sensors_driver/publishers/: CamerasPublishers.java  FluidPressurePublisher.java  IlluminancePublisher.java  ImuPublisher.java  MagneticFieldPublisher.java  NavSatFixPublisher.java  TemperaturePublisher.java
src/org/ros/android/android_sensors_driver/utilities/: Config.java
(+14 files in other folders)
