<?xml version="1.0"?>
<package>
    <name>android_ros_drivers</name>
    <version>1.2.0</version>
    <description>
        Gets android sensors publishing on their values onto the ROS communication framework.
    </description>
    <maintainer email="pgeneva@udel.edu">Patrick Geneva</maintainer>
    <author email="pgeneva@udel.edu">Patrick Geneva</author>
    <license>Apache 2</license>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>rosjava_build_tools</build_depend>
    <build_depend>rosjava_core</build_depend>
</package>